[gd_scene load_steps=8 format=3 uid="uid://bdrjoyomivcy3"]

[ext_resource type="Script" path="res://scenes/plant/black_rook_plant/black_rook_plant.gd" id="1_p1exv"]
[ext_resource type="PackedScene" uid="uid://syncrf2omc1y" path="res://scenes/plant/plant_animations.tscn" id="2_6r5rd"]
[ext_resource type="Texture2D" uid="uid://8eecr57sb6kt" path="res://assets/spritesheet.png" id="3_ue1hh"]
[ext_resource type="PackedScene" uid="uid://etodwv0g65e" path="res://scenes/plant/satisfaction_particles.tscn" id="4_aermd"]
[ext_resource type="PackedScene" uid="uid://bl3e111kk7mep" path="res://scenes/plant/dirt_particles.tscn" id="5_oru7r"]

[sub_resource type="AtlasTexture" id="AtlasTexture_520x6"]
atlas = ExtResource("3_ue1hh")
region = Rect2(715, 1, 16, 16)

[sub_resource type="CircleShape2D" id="CircleShape2D_el8s1"]
radius = 8.0

[node name="BlackRookPlant" type="Node2D"]
script = ExtResource("1_p1exv")

[node name="PlantAnimations" parent="." instance=ExtResource("2_6r5rd")]

[node name="Sprite" type="Sprite2D" parent="."]
position = Vector2(0, 6)
texture = SubResource("AtlasTexture_520x6")
offset = Vector2(0, -6)

[node name="SatisfactionParticles" parent="." node_paths=PackedStringArray("plant") instance=ExtResource("4_aermd")]
plant = NodePath("..")

[node name="DirtParticles" parent="." instance=ExtResource("5_oru7r")]
unique_name_in_owner = true

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("CircleShape2D_el8s1")

[connection signal="mouse_entered" from="Area2D" to="." method="_on_area_2d_mouse_entered"]
[connection signal="mouse_exited" from="Area2D" to="." method="_on_area_2d_mouse_exited"]
